--- a/views/answer.ejs
+++ b/views/answer.ejs
@@ -6,8 +6,8 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <h1>Bienvenido a <%= title %></h1>
-    <p>El portal donde podrá crear sus propios juegos</p>
-	<p><a href="/quizes/question">Comience a jugar</a></p>
+    <h2> Quiz: El juego de las preguntas</h2>
+	<%= respuesta %>
+	<a href="/quizes/question"> Intentelo otra vez</a>
   </body>
 </html>
