--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h2> Quiz: El juego de las preguntas</h2>
-	<%= respuesta %>
+	<%= respuesta %><p>
 	<a href="/quizes/question"> Intentelo otra vez</a>
   </body>
 </html>
