--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Quiz</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="utf-8">
+	<title>Quiz</title>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
   </head>
   <body>
     <h2> Quiz: El juego de las preguntas</h2>
