--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-	<title>Quiz</title>
+    <meta charset="utf-8"></meta>
+    <title>Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-   <h2> Quiz: El juego de las preguntas</h2>
+    <h2>Quiz: el juego de las preguntas</h2>
    
-   <form method="get" action="/quizes/answer">
-		Pregunta: <%=pregunta%> <p>
-		<input type="text" name="respuesta" value="Responda aquí"/>
-		<input type="submit" value="Enviar"/>
-   </form>
+    <form method="get" action="/quizes/answer">
+        Pregunta: <%= pregunta %><p>
+        <input type="text" name="respuesta" value="Responda Aquí" />
+        <input type="submit" value="Enviar">
+    </form>
   </body>
 </html>
