--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,10 @@
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">
       ¿Que es un Quiz?</a>
+	  
+	  <a href="https://github.com/msansegundo/Quiz-2015m">
+	  Mi proyecto en GitHub</a>
+	  
   </footer>
 </div>
 </body> 
