--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,12 +28,13 @@
     <div><%- body %></div>
   </section>
 
-  <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-      ¿Que es un Quiz?</a>
-	  
-	  <a href="https://github.com/msansegundo/Quiz-2015m">
-	  Mi proyecto en GitHub</a>
+  <footer class="main" id="f1">    
+	<ol>
+		<li><a href="http://es.wikipedia.org/wiki/Quiz">
+		  ¿Que es un Quiz?</a></li>
+		<li><a href="https://github.com/msansegundo/Quiz-2015m">
+	  Mi proyecto en GitHub</a></li>
+	</ol>  
 	  
   </footer>
 </div>
