--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <title>Creditos</title>
+    
   </head>
   <body>
     <h4>Autor</h4>
